<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_to_do_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.bmarshall.todolistapp.view.AddItemActivity">

    <EditText
        android:id="@+id/nameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:hint="@string/title"/>

    <Spinner
        android:id="@+id/reminderTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:entries="@array/reminder_times" />

    <EditText
        android:id="@+id/startDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reminderTime"
        android:onClick="showStartDatePickerDialog"
        android:focusable="false"
        android:hint="@string/startDate"/>

    <EditText
        android:id="@+id/startTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/startDate"
        android:layout_centerHorizontal="true"
        android:onClick="showStartTimePickerDialog"
        android:focusable="false"
        android:hint="@string/startTime"/>

    <EditText
        android:id="@+id/dueDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/startTime"
        android:onClick="showDueDatePickerDialog"
        android:focusable="false"
        android:hint="@string/dueDate"/>

    <EditText
        android:id="@+id/dueTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dueDate"
        android:layout_centerHorizontal="true"
        android:onClick="showDueTimePickerDialog"
        android:focusable="false"
        android:hint="@string/dueTime"/>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dueTime"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/submit"
        android:onClick="onSubmit"/>

</RelativeLayout>
